# gpsControl

ground_station/: CMakeLists.txt  package.xml  plugin_description.xml
ground_station/rviz/: groud_station.launch  ground_station.rviz
ground_station/src/: rviz_callDemo.cpp  rviz_callDemo.h  rviz_callLand.cpp  rviz_callLand.h  rviz_callTakeOff.cpp  rviz_callTakeOff.h  rviz_setHomePoint.cpp  rviz_setHomePoint.h
mavlink/pymavlink/generator/: mavgen_c.py
mavros/mavros/: CMakeLists.txt  mavros_plugins.xml
mavros/mavros/launch/: UAV_1_VIO_px4.launch  node.launch  px4_config.yaml  px4_pluginlists.yaml
mavros/mavros/src/lib/: uas_data.cpp
mavros/mavros/src/plugins/: command.cpp  imu.cpp  local_position.cpp  setpoint_raw.cpp
mavros/mavros_extras/: CMakeLists.txt  mavros_plugins.xml
mavros/mavros_extras/src/plugins/: distance_sensor.cpp  gps.cpp  mocap_pose_estimate.cpp  vision_pose_estimate.cpp
quad_pos_ctrl/ctrl_msg/: CMakeLists.txt
quad_pos_ctrl/ctrl_msg/srv/: SetDemo.srv
quad_pos_ctrl/quad_pos_ctrl/: CMakeLists.txt
quad_pos_ctrl/quad_pos_ctrl/include/: bag_handle.h  controller.h  mavros_interface.h  state_estimate_vio.h
quad_pos_ctrl/quad_pos_ctrl/launch/: UAV1GPSController.launch  VIOUAV1_controller.launch  testTaskMode.launch  vio_test_takeoff.launch
quad_pos_ctrl/quad_pos_ctrl/src/: controller.cpp
quad_pos_ctrl/quad_pos_ctrl/test/: testTaskMode.cpp  testTaskMode2.cpp  test_takeoff_node4.cpp
